# grph_lib

./: CMakeLists.txt  README.md  main.cpp
Google_tests/: CMakeLists.txt
Google_tests/grph_tests/: test_main.cpp
Google_tests/grph_tests/graph/random/actions/: PullEdgeTest.cpp
Google_tests/integration_tests/test_graphs/: example_1.tgf  example_big_graph.tgf  example_from_manual.tgf  example_tree.tgf
Google_tests/lib/: README.md
Google_tests/lib/docs/: gmock_cook_book.md
Google_tests/lib/docs/reference/: actions.md
src/exceptions/graph/: exceptions.h
src/graph/common/: AdjacencyList.hpp  AdjacencyMatrix.hpp  DegreesVector.hpp  EdgesList.hpp  types.hpp
src/graph/criteria/: ATR.hpp
src/graph/random/: Chain.hpp  IRandomGraph.hpp
src/graph/random/actions/: Actions.hpp
src/graph/random/undirected_graph/: UndirectedRandomGraph.cpp  UndirectedRandomGraph.hpp
src/graph/random/undirected_graph/actions_impl/: PullEdgeActionURG.cpp  RemoveRandomEdgeActionURG.cpp  RemoveTrivialChainActionURG.cpp
src/utils/parse/: GMLParser.hpp  TGFParser.hpp
